--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,4 @@
-setuptools
-streamlit==1.24.0
-
-requests==2.31.0
-langchain-core
-langchain-groq
-deepgram-sdk
-asyncio==3.4.3
+streamlit 
+deepgram-sdk 
+python-dotenv 
+pyaudio
